--- a/css/test.html
+++ b/css/test.html
@@ -24,4 +24,6 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 </symbol>
 
 .el-page-two { margin-bottom: 48px; } .el-one, .el-two, .el-four, .el-five,
-.el-seven, .el-eight { margin-right: 24px; }
+.el-seven, .el-eight { margin-right: 24px; } @media screen and (min-width:
+428px) { } @media screen and (min-width: 768px) { } @media screen and
+(min-width: 1158px) { }
