--- a/css/test.html
+++ b/css/test.html
@@ -26,4 +26,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .el-page-two { margin-bottom: 48px; } .el-one, .el-two, .el-four, .el-five,
 .el-seven, .el-eight { margin-right: 24px; } @media screen and (min-width:
 428px) { } @media screen and (min-width: 768px) { } @media screen and
-(min-width: 1158px) { }
+(min-width: 1158px) { } @media screen and (min-width: 428px) { .button-order {
+margin-top: 72px; margin-right: 130px; margin-bottom: 112px; margin-left: 129px;
+width: 169px; height: 56px; display: block; margin: 0 auto; } } @media screen
+and (min-width: 768px) { .button-order { margin-top: 36px; margin-right: 299px;
+margin-bottom: 112px; margin-left: 300px; width: 169px; height: 56px; display:
+block; margin: 0 auto; } } @media screen and (min-width: 1158px) { }
