--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
           aria-expanded="false"
           aria-controls="mobile-menu"
         >
-          <svg class="menu-toggle" width="32px" height="22px">
-            <use href="./images/sprite.svg#gal"></use>
+          <svg class="menu-toggle icon" width="32px" height="22px">
+            <use href="./images/sprite.svg#icon-Vector-4"></use>
           </svg>
         </button>
       </div>
@@ -717,6 +717,7 @@
               name="user_agreement"
               id="user_agreement"
             />
+
             <svg class="custom-checkbox" width="16" height="16">
               <use
                 class="custom-checkbox-frame"
@@ -724,7 +725,7 @@
               ></use>
               <use
                 class="custom-checkbox-check"
-                href="./images/icons.svg#icon-checked"
+                href="./images/sprite.svg#gal"
               ></use>
             </svg>
             <span class="modal-form-description">
